--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
+    "sass": "^1.75.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-test": "^0.0.5",
