--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
+  "printWidth": 120,
+  "arrowParens": "always",
+  "semi": true,
   "trailingComma": "all",
-  "printWidth": 80
+  "endOfLine": "lf"
 }
