--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "swiper": "^11.1.3",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
