--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.8",
     "formik": "^2.4.6",
     "react": "^18.2.0",
