--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.0",
     "react-slider": "^2.0.6",
     "swiper": "^11.1.3",
