--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "prettier": "^3.2.5",
+    "react-content-loader": "^7.0.2",
     "sass": "^1.75.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
